# py-moc3

./: README.md  pyproject.toml
src/moc3/: __init__.py  __main__.py  _core.py
tests/: test_roundtrip.py
