[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-moc3"
version = "0.1.0"
description = "Python reader/writer for Live2D Cubism .moc3 binary files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ludentes" },
]
keywords = ["live2d", "cubism", "moc3", "vtuber", "animation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

[project.scripts]
moc3 = "moc3.__main__:main"

[project.urls]
Homepage = "https://github.com/Ludentes/py-moc3"
Repository = "https://github.com/Ludentes/py-moc3"
Issues = "https://github.com/Ludentes/py-moc3/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moc3"]
